minor layout bug fixes

--- a/src/app/shared/components/app-dashboard/app-dashboard.component.scss
+++ b/src/app/shared/components/app-dashboard/app-dashboard.component.scss
@@ -35,7 +35,7 @@
     grid-area: 1 / 5 / 2 / 7; 
     margin-bottom: 0;
     align-content: center;
-    &:hover {
+    &--hover:hover {
         background-color: $--color-white-cold;
         cursor:pointer;
     }
